# Replication_MY2024

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  conftest.py  pyproject.toml
regression_data/: ground_truth_moments.npy  moments_reference.npy  old_initial_adjcost.npy  old_initial_discount.npy  old_initial_effort.npy  old_initial_health.npy  old_initial_prodshock.npy
src/: Career_and_Family_Decisions.py  Mahler_Yum_2024.py  Wang_2022.py  _version.py  environments.py  estimation.py  init_distr_2b2t2h.txt  lcm_envs.py  model_function.py  moments.py  plot.py  ppo.py  run_model.py  soep_data.py  stderrors_sens.py  surv_CL.txt  surv_HS.txt  test_run_model.py  utils.py  wrappers.py
src/replication_my/: __init__.py  _version.py  estimation.py  init_distr_2b2t2h.txt  mahler_yum_2024.py  moments.py  plot.py  simulate.py  soep_data.py  stderrors_sens.py  surv_CL.txt  surv_HS.txt  utils.py
tests/: test_run_model.py
