# ======================================================================================
# Project metadata
# ======================================================================================

[project]
name = "replication_MY"
authors = [
]
maintainers = [
]
description = ""
requires-python = "==3.13"
dependencies = [
    "dags",
    "numpy",
    "pandas",
    "flax>=0.10.4,<0.11",
    "distrax>=0.1.5,<0.2",
    "nvtx>=0.2.11,<0.3",
    "interpax>=0.3.8,<0.4",
    "networkx",
]
dynamic = ["version"]
keywords = [

]
classifiers = [

]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

# ======================================================================================
# Build system configuration
# ======================================================================================

[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true


# ======================================================================================
# Pixi
# ======================================================================================

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

# Development Dependencies (conda)
# --------------------------------------------------------------------------------------

[tool.pixi.dependencies]
deepdiff = "*"
memray = "*"
nbformat = ">=5.10.4,<6"
optimagic = "*"
pixi-kernel = ">=0.4.0,<0.5"
plotly = ">=5.2,<6"
pre-commit = "*"
pybaum = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
python = "==3.13"
python-kaleido = "*"
seaborn = ">=0.13.2,<0.14"
statsmodels = ">=0.14.2,<0.15"

# Development Dependencies (pypi)
# --------------------------------------------------------------------------------------

[tool.pixi.pypi-dependencies]
jax = { version = ">=0.4.34", extras = ["cuda12"] }
jaxlib = ">=0.4.34"
pdbp = "*"
replication_MY = {path = ".", editable = true}
statadict = "*"
pylcm = {path = "../pylcm", editable = true}


# Features and Tasks
# --------------------------------------------------------------------------------------

[tool.pixi.feature.test.tasks]
tests = "pytest tests"
tests-with-cov = "pytest tests --cov-report=xml --cov=./"

[tool.pixi.feature.mypy.dependencies]
mypy = "*"
pandas-stubs = "*"
matplotlib = "*"  # required because of pandas

[tool.pixi.feature.mypy.tasks]
mypy = "mypy src"

# Environments
# --------------------------------------------------------------------------------------

[tool.pixi.environments]
mypy = {features = ["mypy"], solve-group = "default"}
test = {features = ["test"], solve-group = "default"}


